# design-patterns-study

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
design_patterns/1_observer/: README.md  after.py  before.py
